Wrap menu item in translation request. Removed reference to inasafe in translation update script.

--- a/plugin_template/module_name.tmpl
+++ b/plugin_template/module_name.tmpl
@@ -63,6 +63,21 @@ class ${TemplateClass}:
         # Declare instance attributes
         self.action = None
 
+    # noinspection PyMethodMayBeStatic
+    def tr(self, message):
+        """Get the translation for a string using Qt translation API.
+
+        We implement this ourselves since we do not inherit QObject.
+
+        :param message: String for translation.
+        :type message: str, QString
+
+        :returns: Translated version of message.
+        :rtype: QString
+        """
+        # noinspection PyTypeChecker,PyArgumentList,PyCallByClass
+        return QCoreApplication.translate('${TemplateClass}', message)
+
     def initGui(self):
         """Create the menu entries and toolbar icons inside the QGIS GUI."""
         # Create action that will start plugin configuration
