--- a/plugin_template/module_name.tmpl
+++ b/plugin_template/module_name.tmpl
@@ -44,7 +44,7 @@ class ${TemplateClass}:
         # initialize plugin directory
         self.plugin_dir = os.path.dirname(__file__)
         # initialize locale
-        locale = QSettings().value("locale/userLocale")[0:2]
+        locale = QSettings().value('locale/userLocale')[0:2]
         locale_path = os.path.join(
             self.plugin_dir,
             'i18n',
@@ -61,7 +61,11 @@ class ${TemplateClass}:
         self.dlg = ${TemplateClass}Dialog()
 
         # Declare instance attributes
-        self.action = None
+        self.actions = []
+        self.menu = self.tr(u'&${TemplateTitle}')
+        # TODO: We are going to let the user set this up in a future iteration
+        self.toolbar = self.iface.addToolBar(u'${TemplateClass}')
+        self.toolbar.setObjectName(u'${TemplateClass}')
 
     # noinspection PyMethodMayBeStatic
     def tr(self, message):
@@ -78,28 +82,99 @@ class ${TemplateClass}:
         # noinspection PyTypeChecker,PyArgumentList,PyCallByClass
         return QCoreApplication.translate('${TemplateClass}', message)
 
+
+    def add_action(
+        self,
+        icon_path,
+        text,
+        callback,
+        enabled_flag=True,
+        add_to_menu=True,
+        add_to_toolbar=True,
+        status_tip=None,
+        whats_this=None,
+        parent=None):
+        """Add a toolbar icon to the InaSAFE toolbar.
+
+        :param icon_path: Path to the icon for this action. Can be a resource
+            path (e.g. ':/plugins/foo/bar.png') or a normal file system path.
+        :type icon_path: str
+
+        :param text: Text that should be shown in menu items for this action.
+        :type text: str
+
+        :param callback: Function to be called when the action is triggered.
+        :type callback: function
+
+        :param enabled_flag: A flag indicating if the action should be enabled
+            by default. Defaults to True.
+        :type enabled_flag: bool
+
+        :param add_to_menu: Flag indicating whether the action should also
+            be added to the menu. Defaults to True.
+        :type add_to_menu: bool
+
+        :param add_to_toolbar: Flag indicating whether the action should also
+            be added to the toolbar. Defaults to True.
+        :type add_to_toolbar: bool
+
+        :param status_tip: Optional text to show in a popup when mouse pointer
+            hovers over the action.
+        :type status_tip: str
+
+        :param parent: Parent widget for the new action. Defaults None.
+        :type parent: QWidget
+
+        :param whats_this: Optional text to show in the status bar when the
+            mouse pointer hovers over the action.
+
+        :returns: The action that was created. Note that the action is also
+            added to self.actions list.
+        :rtype: QAction
+        """
+
+        icon = QIcon(icon_path)
+        action = QAction(icon, text, parent)
+        action.triggered.connect(callback)
+        action.setEnabled(enabled_flag)
+
+        if status_tip is not None:
+            action.setStatusTip(status_tip)
+
+        if whats_this is not None:
+            action.setWhatsThis(whats_this)
+
+        if add_to_toolbar:
+            self.toolbar.addAction(action)
+
+        if add_to_menu:
+            self.iface.addPluginToMenu(
+                self.menu,
+                action)
+
+        self.actions.append(action)
+
+        return action
+
     def initGui(self):
         """Create the menu entries and toolbar icons inside the QGIS GUI."""
-        # Create action that will start plugin configuration
-        self.action = QAction(
-            QIcon(":/plugins/${TemplateClass}/icon.png"),
-            u"$TemplateMenuText",
-            self.iface.mainWindow())
-        # connect the action to the run method
-        self.action.triggered.connect(self.run)
 
-        # Add toolbar button and menu item
-        self.iface.addToolBarIcon(self.action)
-        self.iface.addPluginToMenu(
-            self.tr(u"&${TemplateTitle}"),
-            self.action)
+        icon_path = ':/plugins/${TemplateClass}/icon.png'
+        self.add_action(
+            icon_path,
+            text=self.tr(u'$TemplateMenuText'),
+            callback=self.run,
+            parent=self.iface.mainWindow())
+
 
     def unload(self):
         """Removes the plugin menu item and icon from QGIS GUI."""
-        self.iface.removePluginMenu(
-            self.tr(u"&${TemplateTitle}"),
-            self.action)
-        self.iface.removeToolBarIcon(self.action)
+        for action in self.actions:
+            self.iface.removePluginMenu(
+                self.tr(u'&${TemplateTitle}'),
+                action)
+            self.iface.removeToolBarIcon(action)
+
 
     def run(self):
         """Run method that performs all the real work"""
