--- a/plugin_builder_dialog_base.ui
+++ b/plugin_builder_dialog_base.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>QGIS Plugin Builder 3</string>
+   <string>QGIS Plugin Builder</string>
   </property>
   <property name="sizeGripEnabled">
    <bool>false</bool>
