Added git sha tokens

--- a/plugin_template/Makefile.tmpl
+++ b/plugin_template/Makefile.tmpl
@@ -4,6 +4,7 @@
 # ${TemplateDescription}
 #							 -------------------
 #		begin				: $TemplateBuildDate
+#		git sha				: $Format:%H$
 #		copyright			: (C) $TemplateYear by $TemplateAuthor
 #		email				: $TemplateEmail
 # ***************************************************************************/
