--- a/plugin_template/module_name.tmpl
+++ b/plugin_template/module_name.tmpl
@@ -6,6 +6,7 @@
  $TemplateDescription
                               -------------------
         begin                : $TemplateBuildDate
+        git sha              : $Format:%H$
         copyright            : (C) $TemplateYear by $TemplateAuthor
         email                : $TemplateEmail
  ***************************************************************************/
