--- a/plugin_template/results.tmpl
+++ b/plugin_template/results.tmpl
@@ -31,6 +31,6 @@ For more information, see the PyQGIS Developer Cookbook at:
 </p>
 </div>
 <img src="http://geoapt.com/geoapt_logo_p.png" alt='GeoApt LLC' title='GeoApt LLC' align='absmiddle'>
-&copy;2011-2014 GeoApt LLC - geoapt.com
+&copy;2011-2014 GeoApt LLC - geoapt.com - Git revision : $Format:%H$
 </body>
 </html>
