--- a/plugin_template/__init__.tmpl
+++ b/plugin_template/__init__.tmpl
@@ -8,6 +8,7 @@
         begin                : $TemplateBuildDate
         copyright            : (C) $TemplateYear by $TemplateAuthor
         email                : $TemplateEmail
+        git sha              : $TemplateVCSFormat
  ***************************************************************************/
 
 /***************************************************************************
