--- a/plugin_template/module_name_dialog.tmpl
+++ b/plugin_template/module_name_dialog.tmpl
@@ -6,7 +6,7 @@
  $TemplateDescription
                              -------------------
         begin                : $TemplateBuildDate
-        git sha              : $Format:%H$
+        git sha              : $TemplateVCSFormat
         copyright            : (C) $TemplateYear by $TemplateAuthor
         email                : $TemplateEmail
  ***************************************************************************/
