--- a/plugin_template/readme.tmpl
+++ b/plugin_template/readme.tmpl
@@ -30,4 +30,4 @@ For more information, see the PyQGIS Developer Cookbook at:
 http://www.qgis.org/pyqgis-cookbook/index.html
 
 (C) 2011-2014 GeoApt LLC - geoapt.com
-Git revision : $Format:%H$
+Git revision : $TemplateVCSFormat
