Small formatting tweak for results.html

--- a/plugin_template/results.tmpl
+++ b/plugin_template/results.tmpl
@@ -2,7 +2,7 @@
 <body>
 <h3>Plugin Builder Results</h3>
 
-Congratulations! You just built a plugin for QGIS! Easy eh?<br/>
+Congratulations! You just built a plugin for QGIS! Easy eh?<br/><br />
 
 <div id='help' style='font-size:.9em;'>
 Your plugin <b>${TemplateClass}</b> was created in:<br>
