make pyrcc4 run when any of the files included in %.qrc is changed. this is very useful when the %.qrc file includes for example JavaScript

--- a/plugin_template/Makefile.tmpl
+++ b/plugin_template/Makefile.tmpl
@@ -53,13 +53,15 @@ HELP = help/build/html
 
 PLUGIN_UPLOAD = $$(c)/plugin_upload.py
 
+RESOURCE_SRC=$$(shell grep '^ *<file' resources.qrc | sed 's@</file>@@g;s/.*>//g' | tr '\n' ' ')
+
 QGISDIR=.qgis2
 
 default: compile
 
 compile: $$(COMPILED_RESOURCE_FILES)
 
-%_rc.py : %.qrc
+%_rc.py : %.qrc $$(RESOURCES_SRC)
 	pyrcc4 -o $$*_rc.py  $$<
 
 %.qm : %.ts
