--- a/plugin_template/results.tmpl
+++ b/plugin_template/results.tmpl
@@ -32,6 +32,6 @@ For more information, see the PyQGIS Developer Cookbook at:
 </p>
 </div>
 <img src="http://geoapt.com/geoapt_logo_p.png" alt='GeoApt LLC' title='GeoApt LLC' align='absmiddle'>
-&copy;2011-2014 GeoApt LLC - geoapt.com - Git revision : $Format: %H$
+&copy;2011-2014 GeoApt LLC - geoapt.com 
 </body>
 </html>
