Remove built help files; update for generating pb_tool.cfg

--- a/plugin_template/Makefile.tmpl
+++ b/plugin_template/Makefile.tmpl
@@ -114,14 +114,14 @@ deploy: compile doc transcompile
 	cp -vfr $$(HELP) $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)/help
 
 # The dclean target removes compiled python files from plugin directory
-# also deletes any .svn entry
+# also deletes any .git entry
 dclean:
 	@echo
 	@echo "-----------------------------------"
 	@echo "Removing any compiled python files."
 	@echo "-----------------------------------"
 	find $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME) -iname "*.pyc" -delete
-	find $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME) -iname ".svn" -prune -exec rm -Rf {} \;
+	find $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME) -iname ".git" -prune -exec rm -Rf {} \;
 
 
 derase:
