--- a/plugin_template/Makefile.tmpl
+++ b/plugin_template/Makefile.tmpl
@@ -55,6 +55,8 @@ EXTRAS = icon.png metadata.txt
 
 COMPILED_RESOURCE_FILES = resources_rc.py
 
+PEP8EXCLUDE=pydev,resources_rc.py,conf.py,third_party,ui
+
 UI_FILES = ${TemplateModuleName}_dialog_base.ui
 
 #################################################
