Remove reference to InaSafe from the module template

--- a/plugin_template/module_name.tmpl
+++ b/plugin_template/module_name.tmpl
@@ -95,7 +95,7 @@ class ${TemplateClass}:
         status_tip=None,
         whats_this=None,
         parent=None):
-        """Add a toolbar icon to the InaSAFE toolbar.
+        """Add a toolbar icon to the toolbar.
 
         :param icon_path: Path to the icon for this action. Can be a resource
             path (e.g. ':/plugins/foo/bar.png') or a normal file system path.
