Added locales section to pb_tool template

--- a/plugin_template/pb_tool.tmpl
+++ b/plugin_template/pb_tool.tmpl
@@ -60,6 +60,10 @@ extras: icon.png metadata.txt
 # These must be subdirectories under the plugin directory
 extra_dirs:
 
+# ISO code(s) for any locales (translations), separated by spaces.
+# Corresponding .ts files must exist in the i18n directory
+locales:
+
 [help]
 # the built help directory that should be deployed with the plugin
 dir: help/build/html
