--- a/plugin_template/results.tmpl
+++ b/plugin_template/results.tmpl
@@ -2,7 +2,7 @@
 <body>
 <h3>Plugin Builder Results</h3>
 
-Congratulations! You just built a plugin for QGIS! Easy eh?<br/><br />
+Congratulations! You just built a plugin for QGIS!<br/><br />
 
 <div id='help' style='font-size:.9em;'>
 Your plugin <b>${TemplateClass}</b> was created in:<br>
@@ -13,22 +13,26 @@ Your QGIS plugin directory is located at:<br>
 <p>
 <h3>What's Next</h3>
 <ol>
-    <li>Copy the entire directory containing your new plugin to the QGIS plugin directory
-    <li>Compile the resources file using pyrcc4 (simply run <b>make</b> if you have automake)
+    <li>In your plugin directory, compile the resources file using pyrcc4 (simply run <b>make</b> if you have automake or use <b>pb_tool</b>)
     <li>Test the generated sources using <b>make test</b> (or run tests from your IDE)
+    <li>Copy the entire directory containing your new plugin to the QGIS plugin directory (see Notes below)
     <li>Test the plugin by enabling it in the QGIS plugin manager
     <li>Customize it by editing the implementation file <b>${TemplateModuleName}.py</b>
     <li>Create your own custom icon, replacing the default <b>icon.png</b>
     <li>Modify your user interface by opening <b>${TemplateModuleName}_dialog_base.ui</b> in Qt Designer
+</ol>
+Notes:
+<ul>
     <li>You can use the <b>Makefile</b> to compile and deploy when you
         make changes. This requires GNU make (gmake). The Makefile is ready to use, however you 
         will have to edit it to add addional Python source files, dialogs, and translations.
+    <li>You can also use <b>pb_tool</b> to compile and deploy your plugin. Tweak the <i>pb_tool.cfg</i> file included with your plugin as you add files. Install <b>pb_tool</b> using 
+        <i>pip</i> or <i>easy_install</i>. See <a href="http://loc8.cc/pb_tool">http://loc8.cc/pb_tool</a> for more information.
 </ul>
 </div>
 <div style='font-size:.9em;'>
 <p>
-For more information, see the PyQGIS Developer Cookbook at:
-<a href="http://www.qgis.org/pyqgis-cookbook/index.html">http://www.qgis.org/pyqgis-cookbook/index.html</a>.
+For information on writing PyQGIS code, see <a href="http://loc8.cc/pyqgis_resources">http://loc8.cc/pyqgis_resources</a> for a list of resources.
 </p>
 </div>
 <img src="http://geoapt.com/geoapt_logo_p.png" alt='GeoApt LLC' title='GeoApt LLC' align='absmiddle'>
