--- a/plugin_builder_dialog_base.ui
+++ b/plugin_builder_dialog_base.ui
@@ -515,7 +515,7 @@ Acme Corp.</string>
         </widget>
        </item>
        <item row="10" column="0">
-        <widget class="QLabel" name="optional_items_label">
+        <widget class="QLabel" name="recommended_items_label">
          <property name="font">
           <font>
            <weight>75</weight>
@@ -523,7 +523,7 @@ Acme Corp.</string>
           </font>
          </property>
          <property name="text">
-          <string>Optional Items</string>
+          <string>Recommended Items</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
