Add dropdown for choosing the menu location; write category to metadata.txt

--- a/plugin_template/module_name.tmpl
+++ b/plugin_template/module_name.tmpl
@@ -149,7 +149,7 @@ class ${TemplateClass}:
             self.toolbar.addAction(action)
 
         if add_to_menu:
-            self.iface.addPluginToMenu(
+            self.iface.${TemplateMenuAddMethod}(
                 self.menu,
                 action)
 
@@ -171,7 +171,7 @@ class ${TemplateClass}:
     def unload(self):
         """Removes the plugin menu item and icon from QGIS GUI."""
         for action in self.actions:
-            self.iface.removePluginMenu(
+            self.iface.${TemplateMenuRemoveMethod}(
                 self.tr(u'&${TemplateTitle}'),
                 action)
             self.iface.removeToolBarIcon(action)
