--- a/plugin_builder_dialog_base.ui
+++ b/plugin_builder_dialog_base.ui
@@ -489,6 +489,11 @@ points.&quot;</string>
         <widget class="QComboBox" name="template_cbox">
          <item>
           <property name="text">
+           <string>processing_provider</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
            <string>toolbutton_with_dialog</string>
           </property>
          </item>
@@ -520,7 +525,9 @@ points.&quot;</string>
         </widget>
        </item>
        <item row="2" column="0" colspan="2">
-        <widget class="QFrame" name="template_frame"/>
+        <widget class="QFrame" name="template_frame">
+         <layout class="QGridLayout" name="frame_layout"/>
+        </widget>
        </item>
       </layout>
      </widget>
