--- a/plugin_templates/processing_provider/template/module_name.tmpl
+++ b/plugin_templates/processing_provider/template/module_name.tmpl
@@ -30,7 +30,7 @@ import sys
 import inspect
 
 from processing.core.Processing import Processing
-from exampleprovider.ExampleAlgorithmProvider import ExampleAlgorithmProvider
+from ${TemplateModuleName}_provider import ${TemplateClass}Provider
 
 cmd_folder = os.path.split(inspect.getfile(inspect.currentframe()))[0]
 
@@ -38,10 +38,10 @@ if cmd_folder not in sys.path:
     sys.path.insert(0, cmd_folder)
 
 
-class ProcessingExampleProviderPlugin:
+class ${TemplateClass}Plugin:
 
     def __init__(self):
-        self.provider = ExampleAlgorithmProvider()
+        self.provider = ${TemplateClass}Provider()
 
     def initGui(self):
         Processing.addProvider(self.provider)
