--- a/plugin_templates/processing_provider/template/module_name_algorithm.tmpl
+++ b/plugin_templates/processing_provider/template/module_name_algorithm.tmpl
@@ -34,7 +34,7 @@ from processing.core.outputs import OutputVector
 from processing.tools import dataobjects, vector
 
 
-class ExampleAlgorithm(GeoAlgorithm):
+class ${TemplateClass}Algorithm(GeoAlgorithm):
     """This is an example algorithm that takes a vector layer and
     creates a new one just with just those features of the input
     layer that are selected.
