--- a/plugin_builder_dialog_base.ui
+++ b/plugin_builder_dialog_base.ui
@@ -486,18 +486,7 @@ points.&quot;</string>
      <widget class="QWidget" name="page1">
       <layout class="QGridLayout" name="gridLayout_5">
        <item row="0" column="1">
-        <widget class="QComboBox" name="template_cbox">
-         <item>
-          <property name="text">
-           <string>processing_provider</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>toolbutton_with_dialog</string>
-          </property>
-         </item>
-        </widget>
+        <widget class="QComboBox" name="template_cbox"/>
        </item>
        <item row="0" column="0">
         <widget class="QLabel" name="template_label">
