--- a/plugin_templates/processing_provider/template/module_name_provider.tmpl
+++ b/plugin_templates/processing_provider/template/module_name_provider.tmpl
@@ -27,10 +27,10 @@ __revision__ = '$TemplateVCSFormat'
 
 from processing.core.AlgorithmProvider import AlgorithmProvider
 from processing.core.ProcessingConfig import Setting, ProcessingConfig
-from exampleprovider.ExampleAlgorithm import ExampleAlgorithm
+from ${TemplateModuleName}_algorithm import ${TemplateClass}Algorithm
 
 
-class ExampleAlgorithmProvider(AlgorithmProvider):
+class ${TemplateClass}Provider(AlgorithmProvider):
 
     MY_DUMMY_SETTING = 'MY_DUMMY_SETTING'
 
@@ -41,7 +41,7 @@ class ExampleAlgorithmProvider(AlgorithmProvider):
         self.activate = False
 
         # Load algorithms
-        self.alglist = [ExampleAlgorithm()]
+        self.alglist = [${TemplateClass}Algorithm()]
         for alg in self.alglist:
             alg.provider = self
 
@@ -55,7 +55,7 @@ class ExampleAlgorithmProvider(AlgorithmProvider):
         """
         AlgorithmProvider.initializeSettings(self)
         ProcessingConfig.addSetting(Setting('Example algorithms',
-            ExampleAlgorithmProvider.MY_DUMMY_SETTING,
+            ${TemplateClass}Provider.MY_DUMMY_SETTING,
             'Example setting', 'Default value'))
 
     def unload(self):
@@ -64,7 +64,7 @@ class ExampleAlgorithmProvider(AlgorithmProvider):
         """
         AlgorithmProvider.unload(self)
         ProcessingConfig.removeSetting(
-            ExampleAlgorithmProvider.MY_DUMMY_SETTING)
+            ${TemplateClass}Provider.MY_DUMMY_SETTING)
 
     def getName(self):
         """This is the name that will appear on the toolbox group.
