--- a/plugin_templates/processing_provider/template/__init__.tmpl
+++ b/plugin_templates/processing_provider/template/__init__.tmpl
@@ -1,14 +1,13 @@
 # -*- coding: utf-8 -*-
 """
 /***************************************************************************
- ${TemplateClass}
+ $TemplateClass
                                  A QGIS plugin
  $TemplateDescription
-                             -------------------
+                              -------------------
         begin                : $TemplateBuildDate
         copyright            : (C) $TemplateYear by $TemplateAuthor
         email                : $TemplateEmail
-        git sha              : $TemplateVCSFormat
  ***************************************************************************/
 
 /***************************************************************************
@@ -21,6 +20,10 @@
  ***************************************************************************/
  This script initializes the plugin, making it known to QGIS.
 """
+
+__author__ = '$TemplateAuthor'
+__date__ = '$TemplateBuildDate'
+__copyright__ = '(C) $TemplateYear by $TemplateAuthor'
 
 
 # noinspection PyPep8Naming
