--- a/plugin_templates/processing_provider/template/module_name_algorithm.tmpl
+++ b/plugin_templates/processing_provider/template/module_name_algorithm.tmpl
@@ -1,25 +1,29 @@
 # -*- coding: utf-8 -*-
 
 """
-***************************************************************************
-    $TemplateClass
-    ---------------------
-    Date                 : July 2013
-    Copyright            : (C) 2013 by Victor Olaya
-    Email                : volayaf at gmail dot com
-***************************************************************************
-*                                                                         *
-*   This program is free software; you can redistribute it and/or modify  *
-*   it under the terms of the GNU General Public License as published by  *
-*   the Free Software Foundation; either version 2 of the License, or     *
-*   (at your option) any later version.                                   *
-*                                                                         *
-***************************************************************************
+/***************************************************************************
+ $TemplateClass
+                                 A QGIS plugin
+ $TemplateDescription
+                              -------------------
+        begin                : $TemplateBuildDate
+        copyright            : (C) $TemplateYear by $TemplateAuthor
+        email                : $TemplateEmail
+ ***************************************************************************/
+
+/***************************************************************************
+ *                                                                         *
+ *   This program is free software; you can redistribute it and/or modify  *
+ *   it under the terms of the GNU General Public License as published by  *
+ *   the Free Software Foundation; either version 2 of the License, or     *
+ *   (at your option) any later version.                                   *
+ *                                                                         *
+ ***************************************************************************/
 """
 
-__author__ = 'Victor Olaya'
-__date__ = 'July 2013'
-__copyright__ = '(C) 2013, Victor Olaya'
+__author__ = '$TemplateAuthor'
+__date__ = '$TemplateBuildDate'
+__copyright__ = '(C) $TemplateYear by $TemplateAuthor'
 
 # This will get replaced with a git SHA1 when you do a git archive
 
@@ -60,10 +64,10 @@ class ${TemplateClass}Algorithm(GeoAlgorithm):
         """
 
         # The name that the user will see in the toolbox
-        self.name = 'Create copy of layer'
+        self.name = '$TemplateAlgoName'
 
         # The branch of the toolbox under which the algorithm will appear
-        self.group = 'Algorithms for vector layers'
+        self.group = '$TemplateAlgoGroup'
 
         # We add the input vector layer. It can have any kind of geometry
         # It is a mandatory (not optional) one, hence the False argument
