--- a/plugin_templates/processing_provider/template/module_name_provider.tmpl
+++ b/plugin_templates/processing_provider/template/module_name_provider.tmpl
@@ -1,25 +1,29 @@
 # -*- coding: utf-8 -*-
 
 """
-***************************************************************************
-    $TemplateClass
-    ---------------------
-    Date                 : July 2013
-    Copyright            : (C) 2013 by Victor Olaya
-    Email                : volayaf at gmail dot com
-***************************************************************************
-*                                                                         *
-*   This program is free software; you can redistribute it and/or modify  *
-*   it under the terms of the GNU General Public License as published by  *
-*   the Free Software Foundation; either version 2 of the License, or     *
-*   (at your option) any later version.                                   *
-*                                                                         *
-***************************************************************************
+/***************************************************************************
+ $TemplateClass
+                                 A QGIS plugin
+ $TemplateDescription
+                              -------------------
+        begin                : $TemplateBuildDate
+        copyright            : (C) $TemplateYear by $TemplateAuthor
+        email                : $TemplateEmail
+ ***************************************************************************/
+
+/***************************************************************************
+ *                                                                         *
+ *   This program is free software; you can redistribute it and/or modify  *
+ *   it under the terms of the GNU General Public License as published by  *
+ *   the Free Software Foundation; either version 2 of the License, or     *
+ *   (at your option) any later version.                                   *
+ *                                                                         *
+ ***************************************************************************/
 """
 
-__author__ = 'Victor Olaya'
-__date__ = 'July 2013'
-__copyright__ = '(C) 2013, Victor Olaya'
+__author__ = '$TemplateAuthor'
+__date__ = '$TemplateBuildDate'
+__copyright__ = '(C) $TemplateYear by $TemplateAuthor'
 
 # This will get replaced with a git SHA1 when you do a git archive
 
@@ -72,12 +76,12 @@ class ${TemplateClass}Provider(AlgorithmProvider):
         It is also used to create the command line name of all the
         algorithms from this provider.
         """
-        return 'Example provider'
+        return '$TemplateProviderName'
 
     def getDescription(self):
         """This is the provired full name.
         """
-        return 'Example algorithms'
+        return '$TemplateProviderDescr'
 
     def getIcon(self):
         """We return the default icon.
