--- a/plugin_templates/processing_provider/template/results.tmpl
+++ b/plugin_templates/processing_provider/template/results.tmpl
@@ -15,8 +15,8 @@ Your QGIS plugin directory is located at:<br>
 <ol>
     <li>Test the generated sources using <b>make test</b> (or run tests from your IDE)
     <li>Copy the entire directory containing your new plugin to the QGIS plugin directory (see Notes below)
-    <li>Test the plugin by enabling it in the QGIS plugin manager
-    <li>Customize it by editing the implementation file <b>${TemplateModuleName}.py</b>
+    <li>Test the plugin by enabling it in the QGIS plugin manager and enabling the provider in the Processing Options
+    <li>Customize it by editing the implementation file <b>${TemplateModuleName}_algorithm.py</b>
 </ol>
 Notes:
 <ul>
