Update help to mention docked widget template; bump version to 2.10.1

--- a/plugin_templates/toolbutton_with_dockwidget/template/module_name.tmpl
+++ b/plugin_templates/toolbutton_with_dockwidget/template/module_name.tmpl
@@ -186,7 +186,9 @@ class ${TemplateClass}:
 
         # remove this statement if dockwidget is to remain
         # for reuse if plugin is reopened
-        self.dockwidget = None
+        # Commented next statement since it causes QGIS crashe
+        # when closing the docked window:
+        # self.dockwidget = None
 
         self.pluginIsActive = False
 
