--- a/plugin_templates/shared/Makefile.tmpl
+++ b/plugin_templates/shared/Makefile.tmpl
@@ -71,7 +71,7 @@ default: compile
 
 compile: $$(COMPILED_RESOURCE_FILES)
 
-%.py : %.qrc $$(RESOURCES_SRC)
+%.py : %.qrc $$(RESOURCE_SRC)
 	pyrcc4 -o $$*.py  $$<
 
 %.qm : %.ts
