--- a/plugin_templates/toolbutton_with_dialog/template/module_name.tmpl
+++ b/plugin_templates/toolbutton_with_dialog/template/module_name.tmpl
@@ -69,13 +69,13 @@ class ${TemplateClass}:
         # The groupName statement is created from a template in PluginBuilder
         # from user input. If no group name is entered the left side of
         # the 'or' will be an empty string
-        groupName = u'${TemplateGroupName}' or u'${TemplateTitle}'
+        self.groupName = self.tr(u'${TemplateGroupName}' or u'${TemplateTitle}')
 
-        self.menu = self.tr(groupName)
-        self.toolbar = self.iface.mainWindow().findChild(QToolBar, groupName)
+        self.menu = self.groupName
+        self.toolbar = self.iface.mainWindow().findChild(QToolBar, self.groupName)
         if not self.toolbar:
-            self.toolbar = self.iface.addToolBar(groupName)
-            self.toolbar.setObjectName(groupName)
+            self.toolbar = self.iface.addToolBar(self.groupName)
+            self.toolbar.setObjectName(self.groupName)
 
             # set toolbar color (light blue #ADD8E6 173,216,230)
             # NOTE: color set in 1st plugin of the group loaded will be used
@@ -185,10 +185,8 @@ class ${TemplateClass}:
     def unload(self):
         """Removes the plugin menu item and icon from QGIS GUI."""
         for action in self.actions:
-            self.iface.${TemplateMenuRemoveMethod}(
-                self.tr(u'&${TemplateTitle}'),
-                action)
-            self.iface.removeToolBarIcon(action)
+            self.iface.${TemplateMenuRemoveMethod}(self.groupName, action)
+            self.toolbar.removeAction(action)
         # remove the toolbar
         del self.toolbar
 
