--- a/plugin_templates/shared/Makefile.tmpl
+++ b/plugin_templates/shared/Makefile.tmpl
@@ -50,6 +50,8 @@ UI_FILES = ${TemplateUiFiles}
 
 EXTRAS = metadata.txt ${TemplateExtraFiles}
 
+EXTRA_DIRS =
+
 COMPILED_RESOURCE_FILES = ${TemplateRcFiles}
 
 PEP8EXCLUDE=pydev,resources.py,conf.py,third_party,ui
@@ -110,6 +112,9 @@ deploy: compile doc transcompile
 	cp -vf $$(EXTRAS) $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
 	cp -vfr i18n $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
 	cp -vfr $$(HELP) $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)/help
+	# Copy extra directories if any
+	$(foreach EXTRA_DIR,$(EXTRA_DIRS), cp -R $(EXTRA_DIR) $(HOME)/$(QGISDIR)/python/plugins/$(PLUGINNAME)/;)
+
 
 # The dclean target removes compiled python files from plugin directory
 # also deletes any .git entry
