Processing provider template: active provider by default

--- a/plugin_templates/processing_provider/template/module_name_provider.tmpl
+++ b/plugin_templates/processing_provider/template/module_name_provider.tmpl
@@ -41,8 +41,8 @@ class ${TemplateClass}Provider(AlgorithmProvider):
     def __init__(self):
         AlgorithmProvider.__init__(self)
 
-        # Deactivate provider by default
-        self.activate = False
+        # Activate provider by default
+        self.activate = True
 
         # Load algorithms
         self.alglist = [${TemplateClass}Algorithm()]
